opam-version: "2.0"
name: "ocalustre"
version: "0.5"
synopsis:  "OCaml syntax extension for synchronous programming"
description: "Synchronous extension of OCaml in the style of the Lustre
synchronous programming language.

The OCaml language is extended with Lustre \"nodes\". These nodes can be viewed as
synchronous functions, which run at every instant. An instant is the atomic unit
of time at which the main node of the program computes outputs from inputs.

Inputs and outputs are considered as data flows, i.e. streams of values that can
change through time. For example, the constant 2 is considered as the flow
2,2,2,2,..."
maintainer: "Steven Varoumas <unknown_email>"
authors: "Steven Varoumas"
license: "LGPL"
homepage: "https://github.com/stevenvar/OCaLustre"
bug-reports: "https://github.com/stevenvar/OCaLustre/issues"
dev-repo: "git+https://github.com/stevenvar/OCaLustre.git"
depends: [
  "ocaml" {>= "4.03.0" & < "4.08.0"}
  "ocamlfind"
  "ppx_tools"
  "oasis"
]
build: [
  ["oasis" "setup"]
  ["./configure" "--prefix=%{prefix}%"]
  [make]
]
install:
  [make "install"]
